@@ -4,12 +4,13 @@ import com.sk89q.worldguard.bukkit.event.block.UseBlockEvent;
 import de.greensurvivors.padlock.Padlock;
 import de.greensurvivors.padlock.PadlockAPI;
 import de.greensurvivors.padlock.config.ConfigManager;
-import de.greensurvivors.padlock.config.MessageManager;
 import de.greensurvivors.padlock.config.PermissionManager;
 import de.greensurvivors.padlock.impl.MiscUtils;
 import de.greensurvivors.padlock.impl.SignSelection;
 import de.greensurvivors.padlock.impl.openabledata.Openables;
 import de.greensurvivors.padlock.impl.signdata.*;
+import de.greensurvivors.padlock.language.LangPath;
+import de.greensurvivors.padlock.language.PlaceHolder;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.minimessage.tag.resolver.Placeholder;
 import net.kyori.adventure.text.serializer.plain.PlainTextComponentSerializer;
@@ -38,6 +39,7 @@ import org.bukkit.inventory.EquipmentSlot;
 import org.bukkit.inventory.Inventory;
 import org.jetbrains.annotations.NotNull;
 
+import java.time.Duration;
 import java.util.HashSet;
 import java.util.Objects;
 import java.util.Set;
@@ -57,15 +59,11 @@ public class BlockPlayerListener implements Listener {
 
     /**
      * checks for vanilla spawn protection
-     *
-     * @param player
-     * @param location
-     * @return
      */
     private static boolean isSpawnProtected(@NotNull Player player, @NotNull Location location) {
         int spawnSize = Bukkit.getServer().getSpawnRadius();
 
-        if (Bukkit.getServer().getWorlds().get(0).getEnvironment() == World.Environment.NORMAL &&
+        if (Bukkit.getServer().getWorlds().getFirst().getEnvironment() == World.Environment.NORMAL &&
                 spawnSize > 0 && !player.isOp()) {
             Location spawnLocation = player.getWorld().getSpawnLocation();
             return Math.abs(location.x() - spawnLocation.z()) > spawnSize ||
@@ -78,7 +76,7 @@ public class BlockPlayerListener implements Listener {
      * Quick aka automatic protect
      */
     @EventHandler(ignoreCancelled = true, priority = EventPriority.NORMAL)
-    public void onQuickLock(@NotNull PlayerInteractEvent event) {
+    private void onQuickLock(@NotNull PlayerInteractEvent event) {
         Player player = event.getPlayer();
 
         // Check quick lock status
@@ -150,14 +148,14 @@ public class BlockPlayerListener implements Listener {
 
                                         plugin.getLockCacheManager().removeFromCache(block.getLocation());
                                         // Send message
-                                        plugin.getMessageManager().sendLang(player, MessageManager.LangPath.LOCK_SUCCESS);
+                                        plugin.getMessageManager().sendLang(player, LangPath.LOCK_SUCCESS);
                                     } else {
                                         // reset
                                         replacedState.update(true, false);
                                     }
                                 } else {
                                     // Cannot lock this block
-                                    plugin.getMessageManager().sendLang(player, MessageManager.LangPath.QUICK_LOCK_ERROR);
+                                    plugin.getMessageManager().sendLang(player, LangPath.QUICK_LOCK_ERROR);
                                 }
                             } // not lockable
                         } // clicked block is null
@@ -185,10 +183,10 @@ public class BlockPlayerListener implements Listener {
             if (attachedBlock != null && PadlockAPI.isLockable(attachedBlock)) {
                 if (PadlockAPI.isProtected(attachedBlock)) {
                     if (PadlockAPI.isOwner(attachedBlock, player.getUniqueId())) {
-                        plugin.getMessageManager().sendLang(player, MessageManager.LangPath.LOCK_ERROR_ALREADY_LOCKED);
-                        event.line(0, plugin.getMessageManager().getLang(MessageManager.LangPath.SIGN_LINE_ERROR));
+                        plugin.getMessageManager().sendLang(player, LangPath.LOCK_ERROR_ALREADY_LOCKED);
+                        event.line(0, plugin.getMessageManager().getLang(LangPath.SIGN_LINE_ERROR));
                     } else {
-                        plugin.getMessageManager().sendLang(player, MessageManager.LangPath.NOT_OWNER);
+                        plugin.getMessageManager().sendLang(player, LangPath.NOT_OWNER);
                         event.setCancelled(true);
                     }
                 } else if (player.hasPermission(PermissionManager.ACTION_LOCK.getPerm())) { // all good
@@ -200,8 +198,8 @@ public class BlockPlayerListener implements Listener {
                     // Player with this permission can lock with another name
                     if (!player.hasPermission(PermissionManager.ACTION_LOCK_OTHERS.getPerm())) {
                         // set the player self as owner
-                        event.line(1, Padlock.getPlugin().getMessageManager().getLang(MessageManager.LangPath.SIGN_PLAYER_NAME_ON,
-                                Placeholder.unparsed(MessageManager.PlaceHolder.PLAYER.getPlaceholder(), player.getName())));
+                        event.line(1, Padlock.getPlugin().getMessageManager().getLang(LangPath.SIGN_PLAYER_NAME_ON,
+                            Placeholder.unparsed(PlaceHolder.PLAYER.getPlaceholder(), player.getName())));
 
                         SignLock.addPlayer(sign, true, player);
                     } else {
@@ -216,15 +214,15 @@ public class BlockPlayerListener implements Listener {
                             } else if (strLine.isBlank() && player.hasPermission(PermissionManager.ADMIN_BREAK.getPerm())) { // failsafe: only allow setting a sign without owner if you could break it!
                                 SignLock.addPlayer(sign, true, null);
                             } else {
-                                plugin.getMessageManager().sendLang(player, MessageManager.LangPath.UNKNOWN_PLAYER,
-                                        Placeholder.unparsed(MessageManager.PlaceHolder.PLAYER.getPlaceholder(), strLine));
-                                event.line(0, plugin.getMessageManager().getLang(MessageManager.LangPath.SIGN_LINE_ERROR));
+                                plugin.getMessageManager().sendLang(player, LangPath.UNKNOWN_PLAYER,
+                                    Placeholder.unparsed(PlaceHolder.PLAYER.getPlaceholder(), strLine));
+                                event.line(0, plugin.getMessageManager().getLang(LangPath.SIGN_LINE_ERROR));
                                 return;
                             }
                         } else if (player.hasPermission(PermissionManager.ADMIN_BREAK.getPerm())) { // failsafe: only allow setting a sign without owner if you could break it! (this event should never return null here anyway)
                             SignLock.addPlayer(sign, true, null);
                         } else {
-                            plugin.getMessageManager().sendLang(player, MessageManager.LangPath.LOCK_ERROR_NO_OWNER);
+                            plugin.getMessageManager().sendLang(player, LangPath.LOCK_ERROR_NO_OWNER);
                             event.setCancelled(true);
                             return;
                         }
@@ -238,7 +236,7 @@ public class BlockPlayerListener implements Listener {
                         }
 
                         String strLine = PlainTextComponentSerializer.plainText().serialize(line);
-                        Long timer = SignTimer.getTimerFromComp(line);
+                        Duration timer = SignTimer.getTimerFromComp(line);
 
                         if (timer != null) {
                             SignTimer.setTimer(sign, timer, true);
@@ -254,16 +252,16 @@ public class BlockPlayerListener implements Listener {
 
                     //update Sign after event was done
                     Bukkit.getScheduler().runTaskLater(plugin, () -> SignDisplay.updateDisplay(sign), 2);
-                    plugin.getMessageManager().sendLang(player, MessageManager.LangPath.LOCK_SUCCESS);
+                    plugin.getMessageManager().sendLang(player, LangPath.LOCK_SUCCESS);
 
                     plugin.getLockCacheManager().removeFromCache(attachedBlock.getLocation());
                 } else {
-                    plugin.getMessageManager().sendLang(player, MessageManager.LangPath.NO_PERMISSION);
+                    plugin.getMessageManager().sendLang(player, LangPath.NO_PERMISSION);
                     event.setCancelled(true);
                 }
             } else {
-                plugin.getMessageManager().sendLang(player, MessageManager.LangPath.LOCK_ERROR_NOT_LOCKABLE);
-                event.line(0, plugin.getMessageManager().getLang(MessageManager.LangPath.SIGN_LINE_ERROR));
+                plugin.getMessageManager().sendLang(player, LangPath.LOCK_ERROR_NOT_LOCKABLE);
+                event.line(0, plugin.getMessageManager().getLang(LangPath.SIGN_LINE_ERROR));
             }
         } // not a lock sign
     }
@@ -281,11 +279,10 @@ public class BlockPlayerListener implements Listener {
             if (!player.hasPermission(PermissionManager.EDIT.getPerm())) return;
 
             // check permission: owner or admin
-            if (clickedBlock.getState() instanceof Sign sign &&
-                    (PadlockAPI.isLockSign(sign) || PadlockAPI.isAdditionalSign(sign))) {
+            if (clickedBlock.getState() instanceof Sign sign && PadlockAPI.isLockSign(sign)) {
 
                 SignSelection.selectSign(player, clickedBlock);
-                plugin.getMessageManager().sendLang(player, MessageManager.LangPath.SELECT_SIGN);
+                plugin.getMessageManager().sendLang(player, LangPath.SELECT_SIGN);
 
                 // cancel block place when selecting a sign
                 if (event.hasItem()) {
@@ -308,24 +305,10 @@ public class BlockPlayerListener implements Listener {
         if (block.getState() instanceof Sign sign) {
             if (PadlockAPI.isValidLockSign(sign)) {
                 if (SignLock.isOwner(sign, player.getUniqueId()) || player.hasPermission(PermissionManager.ADMIN_BREAK.getPerm())) {
-                    plugin.getMessageManager().sendLang(player, MessageManager.LangPath.BREAK_LOCK_SUCCESS);
+                    plugin.getMessageManager().sendLang(player, LangPath.BREAK_LOCK_SUCCESS);
                     plugin.getLockCacheManager().removeFromCache(sign);
                 } else { // not allowed to break
-                    plugin.getMessageManager().sendLang(player, MessageManager.LangPath.NOT_OWNER);
-                    event.setCancelled(true);
-                }
-            } else if (PadlockAPI.isAdditionalSign(sign)) {
-                if (PadlockAPI.isOwner(block, player.getUniqueId()) || player.hasPermission(PermissionManager.ADMIN_BREAK.getPerm())) {
-                    final Sign lockSign = PadlockAPI.getLock(PadlockAPI.getAttachedBlock(block), false);
-
-                    //let the additional sign break but update the others
-                    if (lockSign != null) {
-                        Bukkit.getScheduler().runTaskLater(plugin, () -> PadlockAPI.updateLegacySign(lockSign), 2);
-                    }
-                } else { // not allowed to break
-                    PadlockAPI.updateLegacySign(sign);
-
-                    plugin.getMessageManager().sendLang(player, MessageManager.LangPath.NOT_OWNER);
+                    plugin.getMessageManager().sendLang(player, LangPath.NOT_OWNER);
                     event.setCancelled(true);
                 }
             }
@@ -333,7 +316,7 @@ public class BlockPlayerListener implements Listener {
             Sign lock = PadlockAPI.getLock(block, false);
             if (lock != null) {
                 if (!(SignLock.isOwner(lock, player.getUniqueId()) || player.hasPermission(PermissionManager.ADMIN_BREAK.getPerm()))) {
-                    plugin.getMessageManager().sendLang(player, MessageManager.LangPath.ACTION_PREVENTED_LOCKED);
+                    plugin.getMessageManager().sendLang(player, LangPath.ACTION_PREVENTED_LOCKED);
                     event.setCancelled(true);
                 } else if (!plugin.getDependencyManager().isProtectedFromBreak(block, player)) { // if the player is allowed to break the block. Note: we check for break, not interact here, since we want to ensure the player can break the lock!
                     // only break sign, if the broken block was the last protected block
@@ -350,23 +333,6 @@ public class BlockPlayerListener implements Listener {
     }
 
     /**
-     * protect sign from being changed
-     */
-    @Deprecated(forRemoval = true) // only needed for legacy signs.
-    @EventHandler(ignoreCancelled = true, priority = EventPriority.LOW)
-    private void onAttemptChangeLockSign(@NotNull SignChangeEvent event) {
-        Block block = event.getBlock();
-        if (block.getState() instanceof Sign sign &&
-                (PadlockAPI.isLockSign(sign) || PadlockAPI.isAdditionalSign(sign))) {
-            PadlockAPI.updateLegacySign(sign);
-            plugin.getMessageManager().sendLang(event.getPlayer(), MessageManager.LangPath.ACTION_PREVENTED_USE_CMDS);
-            sign.setWaxed(true);
-            sign.update();
-            event.setCancelled(true);
-        }
-    }
-
-    /**
      * protect against wax removing
      */
     @EventHandler(ignoreCancelled = true, priority = EventPriority.HIGH)
@@ -375,10 +341,9 @@ public class BlockPlayerListener implements Listener {
         Block block = event.getClickedBlock();
 
         if (action == Action.RIGHT_CLICK_BLOCK &&
-                (block.getState() instanceof Sign sign &&
-                        (PadlockAPI.isLockSign(sign) || PadlockAPI.isAdditionalSign(sign))) &&
+            (block.getState() instanceof Sign sign && PadlockAPI.isLockSign(sign)) &&
                 event.getItem() != null && Tag.ITEMS_AXES.isTagged(event.getItem().getType())) {
-            plugin.getMessageManager().sendLang(event.getPlayer(), MessageManager.LangPath.ACTION_PREVENTED_USE_CMDS);
+            plugin.getMessageManager().sendLang(event.getPlayer(), LangPath.ACTION_PREVENTED_USE_CMDS);
             event.setCancelled(true);
         }
     }
@@ -397,7 +362,7 @@ public class BlockPlayerListener implements Listener {
     // we only allow the use of blocks when we do handle the original event,
     // but it might be a good inspiration to support more block types
     @EventHandler(priority = EventPriority.LOWEST, ignoreCancelled = true)
-    private void onWorldguardUseBlockEvent(final @NotNull UseBlockEvent event) {
+    private void onWorldGuardUseBlockEvent(final @NotNull UseBlockEvent event) {
         if (event.getOriginalEvent() instanceof PlayerInteractEvent ||
             event.getOriginalEvent() instanceof InventoryOpenEvent ||
             event.getOriginalEvent() instanceof PlayerTakeLecternBookEvent) { // only care for events we handle
@@ -469,7 +434,7 @@ public class BlockPlayerListener implements Listener {
                                 openables.add(openableBlock);
 
                                 if (openableBlock.getType() == Material.IRON_DOOR || openableBlock.getType() == Material.IRON_TRAPDOOR) {
-                                    Openables.toggleOpenable(openableBlock);
+                                    Openables.toggleOpenable(player, openableBlock);
 
                                     // stop blocks from getting placed when opening a door.
                                     if (event.hasItem()) {
@@ -482,19 +447,19 @@ public class BlockPlayerListener implements Listener {
                                         Block relative = openableBlock.getRelative(blockface);
                                         if (relative.getType() == openableBlock.getType()) {
                                             openables.add(relative);
-                                            Openables.toggleOpenable(relative);
+                                            Openables.toggleOpenable(player, relative);
                                         } //not the same type of block
                                     } // for loop
                                 } // not connected
 
-                                Long closetime = SignTimer.getTimer(lockSign, false);
-                                if (closetime != null && closetime > 0) {
-                                    plugin.getOpenableToggleManager().toggleCancelRunning(openables, closetime);
+                                Duration closetime = SignTimer.getTimer(lockSign, false);
+                                if (closetime != null && closetime.toMillis() > 0) {
+                                    plugin.getOpenableToggleManager().toggleCancelRunning(player, openables, closetime);
                                 } // timer disabled
                             } // not openable
                         } // not right-click
                     } else {// no permission
-                        plugin.getMessageManager().sendLang(player, MessageManager.LangPath.ACTION_PREVENTED_LOCKED);
+                        plugin.getMessageManager().sendLang(player, LangPath.ACTION_PREVENTED_LOCKED);
                         event.setCancelled(true);
                     }
                 } // sign was selected. ignoring
@@ -512,7 +477,7 @@ public class BlockPlayerListener implements Listener {
 
         if (!player.hasPermission(PermissionManager.ADMIN_INTERFERE.getPerm()) && PadlockAPI.isInterfering(block, player.getUniqueId())) {
             // no permission
-            plugin.getMessageManager().sendLang(player, MessageManager.LangPath.ACTION_PREVENTED_INTERFERE);
+            plugin.getMessageManager().sendLang(player, LangPath.ACTION_PREVENTED_INTERFERE);
             event.setCancelled(true);
         }
     }
@@ -528,9 +493,9 @@ public class BlockPlayerListener implements Listener {
             if (MiscUtils.shouldNotify(player) && plugin.getConfigManager().isLockable(block.getType())) {
                 //notice me Senpai (o//_//o)
                 if (Objects.requireNonNull(plugin.getConfigManager().getQuickProtectAction()) == ConfigManager.QuickProtectOption.NO_QUICKLOCK) {
-                    plugin.getMessageManager().sendLang(player, MessageManager.LangPath.NOTICE_MANUEL_LOCK);
+                    plugin.getMessageManager().sendLang(player, LangPath.NOTICE_MANUEL_LOCK);
                 } else {
-                    plugin.getMessageManager().sendLang(player, MessageManager.LangPath.NOTICE_QUICK_LOCK);
+                    plugin.getMessageManager().sendLang(player, LangPath.NOTICE_QUICK_LOCK);
                 }
             } // already notified
         } // no permission
@@ -547,7 +512,7 @@ public class BlockPlayerListener implements Listener {
         if (PadlockAPI.isProtected(block) &&
             !(PadlockAPI.isOwner(block, player.getUniqueId()) || player.hasPermission(PermissionManager.ADMIN_USE.getPerm()))) {
 
-            plugin.getMessageManager().sendLang(player, MessageManager.LangPath.ACTION_PREVENTED_LOCKED);
+            plugin.getMessageManager().sendLang(player, LangPath.ACTION_PREVENTED_LOCKED);
             event.setCancelled(true);
 
             // resync the bucket
@@ -569,7 +534,7 @@ public class BlockPlayerListener implements Listener {
 
         if (PadlockAPI.isProtected(block) &&
             !(PadlockAPI.isOwner(block, player.getUniqueId()) || player.hasPermission(PermissionManager.ADMIN_USE.getPerm()))) {
-            plugin.getMessageManager().sendLang(player, MessageManager.LangPath.ACTION_PREVENTED_LOCKED);
+            plugin.getMessageManager().sendLang(player, LangPath.ACTION_PREVENTED_LOCKED);
             event.setCancelled(true);
         } // has permission or is not protected
     }
@@ -590,7 +555,7 @@ public class BlockPlayerListener implements Listener {
                 SignAccessType.AccessType accessType = SignAccessType.getAccessType(lock, false);
 
                 if (!(accessType == SignAccessType.AccessType.SUPPLY || accessType == SignAccessType.AccessType.PUBLIC)) {
-                    plugin.getMessageManager().sendLang(player, MessageManager.LangPath.ACTION_PREVENTED_LOCKED);
+                    plugin.getMessageManager().sendLang(player, LangPath.ACTION_PREVENTED_LOCKED);
                     event.setCancelled(true);
                 }
             }
@@ -628,8 +593,7 @@ public class BlockPlayerListener implements Listener {
                     case DISPLAY, SUPPLY -> {
                         event.setResult(Event.Result.DENY);
                     }
-                    /*case null, // todo next java update */
-                    default -> {
+                    case null -> {
                     }
                 }
             }
@@ -666,8 +630,7 @@ public class BlockPlayerListener implements Listener {
                     case DISPLAY, DONATION -> {
                         event.setResult(Event.Result.DENY);
                     }
-                    /*case null, // todo next java update */
-                    default -> {
+                    case null -> {
                     }
                 }
             }
@@ -675,18 +638,19 @@ public class BlockPlayerListener implements Listener {
     }
 
     @EventHandler(ignoreCancelled = true)
-    private void onInventoryClick(@NotNull InventoryClickEvent event) { // todo warn people when opening what they are opening best with cache to not annoy
-        Inventory topInv = event.getView().getTopInventory();
+    private void onInventoryClick(final @NotNull InventoryClickEvent event) { // todo warn people when opening what they are opening best with cache to not annoy
+        final @NotNull Inventory topInv = event.getView().getTopInventory();
 
         switch (event.getAction()) {
             case NOTHING, DROP_ALL_CURSOR, DROP_ONE_CURSOR, UNKNOWN -> {
             } // nothing
-            case PICKUP_ALL, PICKUP_SOME, PICKUP_HALF, PICKUP_ONE, DROP_ALL_SLOT, DROP_ONE_SLOT, HOTBAR_MOVE_AND_READD -> { // may take
+            case PICKUP_ALL, PICKUP_SOME, PICKUP_HALF, PICKUP_ONE, DROP_ALL_SLOT, DROP_ONE_SLOT,
+                 PICKUP_ALL_INTO_BUNDLE, PICKUP_SOME_INTO_BUNDLE -> { // may take
                 if (event.getClickedInventory() == topInv) {
                     onTakeItem(event, topInv);
                 }
             }
-            case PLACE_ALL, PLACE_SOME, PLACE_ONE -> { // may place
+            case PLACE_ALL, PLACE_SOME, PLACE_ONE, PLACE_FROM_BUNDLE -> { // may place
                 if (event.getClickedInventory() == topInv) {
                     onPlaceItem(event, topInv);
                 }
@@ -696,6 +660,8 @@ public class BlockPlayerListener implements Listener {
                     onPlaceItem(event, topInv);
                     onTakeItem(event, topInv);
                 }
+            }
+            case CLONE_STACK, PLACE_SOME_INTO_BUNDLE, PLACE_ALL_INTO_BUNDLE, PICKUP_FROM_BUNDLE -> {
             }
             case COLLECT_TO_CURSOR -> { // may take complex
                 if (topInv.contains(event.getCursor().getType())) {
